kubernetes/prod/app-prod-service-nodeport-flask.yml
### app-prod-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-nodeport-prod
spec:
  type: NodePort
  selector:
    app: flask-api
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
