kubernetes/prod/app-prod-ingress-flask.yml
### app-prod-ingress-flask.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-api-ingress-prod
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-api-service-prod
                port:
                  number: 5000
